Added a matrix inversion function and fixed 2 little bugs

--- a/ChannelMixMatcher.csproj
+++ b/ChannelMixMatcher.csproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MatchReport.cs" />
+    <Compile Include="MatrixOps.cs" />
     <Compile Include="NormalizationMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
